--- a/html/css/style.css
+++ b/html/css/style.css
@@ -882,7 +882,7 @@ h1 {
     font-size: 15px; 
 }
 .modalheader-type2 {
-    font-size: 13px;
+    font-size: 0.3em;
     text-transform: uppercase;
     text-align: center;
 }
