--- a/html/css/style.css
+++ b/html/css/style.css
@@ -895,7 +895,7 @@ h1 {
     text-align: center;
 }
 .textdescripteurs {
-    font-size:x-small;
+    font-size:0.7em;
     text-align: justify;
 }
 .Filiation{
