--- a/html/css/style.css
+++ b/html/css/style.css
@@ -932,8 +932,8 @@ h1 {
     padding-left: 35%;
 }
 .textitem-footer{
-    font-size:0.4em;
-    text-align: justify;
+    font-size:0.6em;
+    text-align: center;
 }
 
 }
