--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,6 +12,10 @@ html, body {
   font-size: 0,9em;
   color: #D64E26;
 }
+.livrefranchomme {
+  font-size: 1em;
+  color: #D64E26;
+}
 .lienarticlereglementation {
   color: grey; 
   font-size: 0.9em;
