--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,7 +12,7 @@ html, body {
   font-size: 0,9em;
   color: #D64E26;
 }
-a .livresfranchomme {
+.livresfranchomme a {
   font-size: 1em;
   color: #D64E26;
 }
