--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,6 +12,9 @@ html, body {
   font-size: 0,9em;
   color: #D64E26;
 }
+.livresfranchomme {
+  font-size: 1em;
+}
 .livresfranchomme a {
   font-size: 1em;
   color: #D64E26;
