--- a/html/css/style.css
+++ b/html/css/style.css
@@ -580,7 +580,7 @@ h1 {
     max-height: 180px;
     margin: 0;
     padding: 0;
-    vertical-align: center;
+    vertical-align: middle;
 }
 }
 
@@ -673,7 +673,7 @@ h1 {
     max-height: 180px;
     margin: 0;
     padding: 0;
-    vertical-align: center;
+    vertical-align: middle;
 }
 }
 
