--- a/html/css/style.css
+++ b/html/css/style.css
@@ -911,9 +911,20 @@ h1 {
 
 /* PROs */
 .premium_pros {
-    
+    height: 200px;
 }
+.standard_pros {
+    height: 100px;
+}
+.pro_informations {
 
+}
+.premium_pros img {
+    max-height: 100%;
+}
+.standard_pros img {
+    max-height: 100%;
+}
 
 /* LANGUAGES */
 
