sponsors : first approach with an horizontal scroll

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -910,11 +910,11 @@ h1 {
 
 
 /* PROs */
-.premium_pros {
-    height: 200px;
+/*.premium_pros {
+    height: 100%;
 }
 .standard_pros {
-    height: 100px;
+    height: 100%;
 }
 .pro_informations {
 
@@ -924,6 +924,23 @@ h1 {
 }
 .standard_pros img {
     max-height: 100%;
+}
+.standard_pros_list {
+    height: 100px;
+    overflow: scroll;
+}
+.premium_pros_list {
+    height: 200px;
+}*/
+.premium_pros_list {
+    height: 200px;
+}
+.standard_pros_list {
+    height: 100px;
+}
+.premium_and_standard_pros {
+    white-space: nowrap;
+    overflow: scroll;
 }
 
 /* LANGUAGES */
