--- a/html/css/style.css
+++ b/html/css/style.css
@@ -490,12 +490,12 @@ td, .table td {
 .iconetab {
   display: none;
 }
-.textitem-footer{
+.textitem-footer {
     font-size:0.7em;
     text-align: center;
     margin-bottom: 0;
 }
-.nav-link{
+.nav-item {
   color: red;
 }
 }
