--- a/html/css/style.css
+++ b/html/css/style.css
@@ -444,7 +444,7 @@ td, .table td {
   font-style: italic;
   font-weight: normal;
 }
-p .imgmp {
+.blockimg .imgmp {
   max-width: 180px;
   max-height: 180px;
   margin-left: auto;
