--- a/html/css/style.css
+++ b/html/css/style.css
@@ -500,7 +500,7 @@ td, .table td {
   font-size:small;
   font-weight: normal;
 }
-.iconetab {
+.fa-question-circle {
   display: none;
 }
 .textitem-footer {
