--- a/html/css/style.css
+++ b/html/css/style.css
@@ -957,6 +957,7 @@ p.#you_can_zoom {
 
 
 /* carousel from MeneerOom */
+/* multiple items carousel - https://www.jqueryscript.net/slider/responsive-bootstrap-carousel-multiple-items.html */
 /*********************************************************************/
 /* Bootstrap 4 Multiple Item Carousel */
 /*********************************************************************/
