--- a/html/css/style.css
+++ b/html/css/style.css
@@ -518,8 +518,8 @@ td, .table td {
 th, .table th, td, .table td{
     font-size: 0.7em;
 }
-table .icone {
-  size: 0;
+.icone {
+  color: red;
 }
 }
 
