--- a/html/css/style.css
+++ b/html/css/style.css
@@ -500,6 +500,11 @@ td, .table td {
   font-size:small;
   font-weight: normal;
 }
+.textitem2 {
+  font-size:small;
+  font-weight: normal;
+  text-align: center;
+}
 .lienarticlereglementation {
   color: grey; 
   font-size: 0.7em;
