--- a/html/css/style.css
+++ b/html/css/style.css
@@ -521,7 +521,6 @@ th, .table th, td, .table td{
 .iconetab {
   display: none !important;
 }
-
 .modal-title {
     font-size: 15px; 
 }
@@ -541,6 +540,9 @@ th, .table th, td, .table td{
 }
 .panel-footer{
     font-size:12px;
+}
+.sondage a {
+  color: black;
 }
 }
 
