--- a/html/css/style.css
+++ b/html/css/style.css
@@ -541,8 +541,8 @@ th, .table th, td, .table td{
 .panel-footer{
     font-size:12px;
 }
-.sondage a {
-  color: black;
+.dropdown-menu-right a {
+  color: red;
 }
 }
 
