--- a/html/css/style.css
+++ b/html/css/style.css
@@ -547,7 +547,7 @@ th, .table th, td, .table td{
 .petitbtn {
   line-height: 1em;
 }
-.IFRA .tab-content{
+.IFRA .tab-content .tab-pane{
   background-color: blue;
   min-width: 100%;
 }
