--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -804,6 +804,12 @@ font-size: 10px;
 .img4creationparfum {
   display: none;
 }
+.sondage a{
+  color: #D64E26;
+}
+.petitbtn {
+  line-height: 1em;
+}
 }
 
 
