--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -219,7 +219,7 @@ hr {
   font-weight: bold;
   color: red;
 }
-.logosupporter {
+.logopremium, .logostandards {
   border: 1px solid #FBE5D6FF;
   box-shadow: 2px 2px 22px 0px rgba(251,229,214,1);
 }
