--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -446,6 +446,9 @@ hr {
     cursor:pointer;
 }
 
+.logostandards {
+  size: 2em;
+}
 /*#########################
 #########LANGUAGE##########
 #########################*/
