--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -449,6 +449,9 @@ hr {
 .sponsors {
   min-height: 5em;
 }
+.logostandards {
+  min-height: 100%;
+}
 /*#########################
 #########LANGUAGE##########
 #########################*/
