--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -450,7 +450,7 @@ hr {
   min-height: 5em;
 }
 .logostandards {
-  min-height: 100%;
+  min-height: 5em;
 }
 /*#########################
 #########LANGUAGE##########
