--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -811,6 +811,9 @@ font-size: 10px;
 .petitbtn {
   line-height: 1em;
 }
+.sponsors {
+  max-width: 100%;
+}
 }
 
 @media screen and (min-width: 768px) {
