--- a/html/css/style.css
+++ b/html/css/style.css
@@ -802,7 +802,7 @@ h1 {
 .moq-10-color {
         color: green;
 }
-.premium_pros_list{
+.premium_and_standard_pros{
   background-color: blue;
 }
 /* LANGUAGES */
