--- a/html/css/style.css
+++ b/html/css/style.css
@@ -805,6 +805,9 @@ h1 {
 .premium_and_standard_pros{
   background-color: blue;
 }
+.both_sponsors {
+  background-color: red;
+}
 /* LANGUAGES */
 
 *:lang(fr) {
