--- a/html/css/style.css
+++ b/html/css/style.css
@@ -808,7 +808,7 @@ h1 {
 .carouselcentré {
   background-color: red;
 }
-.glide__track {
+.glide__slides {
   vertical-align: middle;
   background-color: yellow;
 }
