--- a/html/css/style.css
+++ b/html/css/style.css
@@ -807,6 +807,8 @@ h1 {
 }
 .carouselcentré {
   background-color: red;
+  max-height: 100%;
+  min-height: 100%;
 }
 .glide__slides {
   vertical-align: middle;
