--- a/html/css/style.css
+++ b/html/css/style.css
@@ -561,6 +561,10 @@ th, .table th, td, .table td{
 .premium_pros img {
    max-height: 2em;
 }
+.premium_pros {
+   max-height: 2em;
+   background-color: blue;
+}
 .standard_pros img {
   max-height: 3em;
 }
