--- a/html/css/style.css
+++ b/html/css/style.css
@@ -568,6 +568,8 @@ th, .table th, td, .table td{
 }
 .premium_pros {
    background-color: blue;
+   max-height: 60%;  
+   min-height: 40%;
 }
 .standard_pros img {
   max-height: 3em;
