--- a/html/css/style.css
+++ b/html/css/style.css
@@ -559,7 +559,7 @@ th, .table th, td, .table td{
   line-height: 1em;
 }
 .premium_pros img {
-   max-height: 2em;
+   max-height: 50%;
 }
 
 .standard_pros img {
