--- a/html/css/style.css
+++ b/html/css/style.css
@@ -562,7 +562,7 @@ th, .table th, td, .table td{
   max-height: 50%;
 }
 .premium_pros {
-  min-height: 50%;
+  height: 20%; !important
   background-color: blue;
 }
 .standard_pros img {
