--- a/html/css/style.css
+++ b/html/css/style.css
@@ -563,6 +563,8 @@ th, .table th, td, .table td{
 }
 .both_sponsors {
   background-color: blue;
+  min-height: 100%;
+  max-height: 100%;
 }
 .premium_pros {
   max-height: 20% !important; 
