--- a/html/css/style.css
+++ b/html/css/style.css
@@ -559,6 +559,7 @@ th, .table th, td, .table td{
   line-height: 1em;
 }
 .both_sponsors {
+  background-color: blue;
   min-height: 100%;
   max-height: 100%;
 }
@@ -569,7 +570,6 @@ th, .table th, td, .table td{
   min-height: 10em !important;
   max-height: 10em !important;
 }
-
 .moq-circle {
   position: absolute;
   top: 0px;
