--- a/html/css/style.css
+++ b/html/css/style.css
@@ -570,8 +570,10 @@ th, .table th, td, .table td{
   max-height: 3em !important;
 }
 .standard_pros img {
-  min-height: 4em !important;
-  max-height: 4em !important;
+  min-width: 3em !important;
+  max-width: 3em !important;
+  min-height: 3em !important;
+  max-height: 3em !important;
 }
 
 .moq-circle {
