--- a/html/css/style.css
+++ b/html/css/style.css
@@ -650,7 +650,7 @@ h1 {
 }
 .scrollbar-inside {
   overflow-y: auto;
-  max-height: calc(30% - 0px);
+  max-height: calc(102vh - 320px);
 }
 .space{
     height:20%;
