--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -860,6 +860,11 @@ font-size: 10px;
   font-size: 0.8em;
   font-weight: bold;
 }
+.ajoutMPavecSponsor {
+  color:black;
+  font-size: 1em;
+  font-weight: bold;
+}
 /*drawing the line itself OK */
 .timeline:before{
   content: '';
