--- a/html/css/style.css
+++ b/html/css/style.css
@@ -234,6 +234,7 @@ html, body {
     position: absolute;
     bottom: 40%;
     left: 50%;
+    min-height: 30%;
     width: 100%;
     transform: translate(-50%, 0);
     z-index: 9999;
