--- a/html/css/style.css
+++ b/html/css/style.css
@@ -217,7 +217,9 @@ html, body {
 ###########RGPD############
 #########################*/
 .textRGPD {
-   text-align: justify 
+   text-align: justify;
+   margin-top: 2%;
+
 }
 .boutonRGPD {
     text-align: center;
