--- a/html/css/style.css
+++ b/html/css/style.css
@@ -564,13 +564,14 @@ th, .table th, td, .table td{
 }
 }
 
-
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1500px) {
 .correctspacebug {
   min-height: 24em;
   max-height: 24em;
 }
+}
 
+@media screen and (min-width: 1400px) {
 h1 {
     width: 100%;
    font-style: bold;
