--- a/html/css/style.css
+++ b/html/css/style.css
@@ -291,6 +291,7 @@ html, body {
 
 .text-in-color-brown {
   color: #D64E26;
+  font-size: 1.2em;
 }
 
 /*##################################################
