--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -1,4 +1,3 @@
-
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -448,7 +447,7 @@ hr {
 .correctspacebug {
     height: 20em;
 }
-.logomenu:hover, .logopremium:hover; .logostandards:hover {
+.logomenu:hover {
     transform: scale(1.1);
     cursor:pointer;
 }
