--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -48,6 +48,12 @@ p {
 .slogan{
   font-size:0.75em;
 }
+@media screen and (min-width: 1400px) {
+.slogan{
+  font-size:1,2em;
+}
+}
+
 h4 {
   font-size: 1em;
 }
