--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -447,8 +447,11 @@ hr {
 .correctspacebug {
     height: 20em;
 }
-.logomenu{
-  size: 2em;
+.logomenu {
+  min-height: 5em;
+  max-height: 5em;
+  min-width: 5em;
+  max-width: 5em;
 }
 .logomenu:hover {
     transform: scale(1.1);
