--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -117,6 +117,7 @@ hr {
 /*POLICES */
 .text-in-color-brown {
   color: #D64E26;
+  font-size: 1em;
 }
 .with-my-border {
   border: 2px solid #D64E26;
@@ -659,7 +660,11 @@ overflow-x: auto;
     font-size: 8px;
 }
 }
-
+@media screen and (min-width: 1400px) {
+.text-in-color-brown{
+  font-size: 1.2em;
+}
+}
 @media screen and (min-width: 768px) and (max-width: 990px) {
 table {
 min-width: 100%;
