--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -453,6 +453,13 @@ hr {
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
 }
+.boutonclickable {
+    color:black;
+    font-size: 0.9vw;
+    text-decoration:underline;
+    cursor:pointer;
+    display: inline;
+}
 .logomenu:hover {
     transform: scale(1.1);
     cursor:pointer;
@@ -545,6 +552,13 @@ caption {
 .pagederoulante {
   height: 92%;
   overflow-y: scroll;
+}
+.boutonclickable {
+    color:black;
+    font-size: 1.1vw;
+    text-decoration:underline;
+    cursor:pointer;
+    display: inline;
 }
 .img1allergene{
   float: right;
