--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -828,6 +828,14 @@ font-size: 10px;
 .envoiRGPD {
   min-width: 100%;
 }
+.textRGPD {
+   text-align: justify;
+   min-width:100%;
+}
+.boutonRGPD {
+    text-align: center;
+    min-width: 100%;
+}
 .partiedroite{
   min-width: 100%;
 }
