--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -419,7 +419,7 @@ hr {
     width: 100%;
     transform: translate(-50%, 0);
     z-index: 999;
-    background-color: #FFF8C2;
+    background-color: #FBE5D6FF;
     animation-name: RGPD_animation;
     animation-duration: 2s;
     border-top-left-radius: 12px;
@@ -829,13 +829,14 @@ font-size: 10px;
   min-width: 100%;
 }
 .textRGPD {
-   text-align: justify;
-   min-width:100%;
+  margin-top: 5%;
+  text-align: justify;
+  min-width:100%;
 }
 .boutonRGPD {
-    margin-top: 5%;
-    text-align: center;
-    min-width: 100%;
+  margin-top: 5%;
+  text-align: center;
+  min-width: 100%;
 }
 .partiedroite{
   min-width: 100%;
