--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -838,6 +838,12 @@ font-size: 10px;
   text-align: center;
   min-width: 100%;
 }
+#RGPD_warning {
+    bottom: 20%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, 0);
+}
 .partiedroite{
   min-width: 100%;
 }
